Get user profile is completed knowlodge for bff
